--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <section>
       <h2>Jak to działa?</h2>
       <ol>
-        <li>Napisz do mnie na IG / Discord</li>
+        <li>Napisz do mnie Mail / Discord / Instagram</li>
         <li>Ustalimy brief i Twoją wizję</li>
         <li>Przygotuję projekt i prześlę do akceptacji</li>
         <li>Otrzymasz gotowe pliki + pełne prawa</li>
