--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LogoGraph – Kreatywne logotypy</title>
+
+  <!-- 🔍 SEO -->
+  <title>Logograph – Projekty logo na zamówienie</title>
+  <meta name="description" content="Tworzę unikalne logo dopasowane do Twojej marki. Skontaktuj się i zamów już dziś!" />
+  <meta name="keywords" content="logo, logo design, logotyp, grafika, branding, logograph, projekt logo" />
+  <meta name="author" content="Logograph / ZyroR3ps" />
+
+  <!-- 📱 Link preview -->
+  <meta property="og:title" content="Logograph – Projekty logo na zamówienie" />
+  <meta property="og:description" content="Tworzę unikalne logo dopasowane do Twojej marki." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://logograph.github.io/logograph/" />
+  <meta property="og:image" content="LINK_DO_OBRAZKA" /> <!-- np. logo -->
+
+  <link rel="canonical" href="https://logograph.github.io/logograph/" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
     * {
