--- a/index.html
+++ b/index.html
@@ -209,6 +209,14 @@
         aby logo było uniwersalne oraz skalowalne. Pszczoła ma symbolizować pracowitość, energię. 
         Megafon odnosi się do marketingu, rozgłosu. Pioruny również stanowią nawiązanie do energii i 
         szybkości przekazywania informacji.</figcaption>
+        
+        <img src="botanifydopas.png" alt="Botanify" />
+        <img src="botanify mock 1.png" alt="Botanify" />
+        <img src="botanify mock 2.png" alt="Mockup 2" />
+        <figcaption>Botanify - fikcyjna firma zajmujaca sie sprzedaza narzedzi ogrodniczych czy sadzonek. 
+          Projektując logo zadbałem o to, by w literach zawarte były elementy ściśle związane z ogrodnictwem. 
+          Uznałem, że sam symbol może być bezpośrednio wyciągnięty z napisu, ponieważ w tym przypadku dobrze to 
+          ze sobą współgra i ułatwia klientowi skojarzenie firmy. Użyte zostały kolory zbliżone kojarzone właśnie z naturą.</figcaption>
       </div>
     </section>
 
