--- a/index.html
+++ b/index.html
@@ -220,6 +220,12 @@
       </div>
     </section>
 
+    <img src="nordicodopas.png" alt="Botanify" />
+        <img src="nordico mock 1.png" alt="Botanify" />
+        <figcaption>Logo firmy Nordico - fikcyjnej działalności zajmującej się projektowaniem nowoczesnych wnętrz inspirowanych stylem 
+          skandynawskim. Za symbol logo wybrałem lisa, symbolizującego spryt i lekkość. Często przedstawiany w skandynawskich kulturach.
+          Wybrałem styl minimalistyczny tak, aby klient łatwo był w stanie zapamiętać i skojarzyć logo. </figcaption>
+
     <section class="contact">
       <h2>Kontakt</h2>
       <p>Chcesz złożyć zamówienie lub zapytać o projekt?</p>
