--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <img src="nordicodopas.png" alt="Botanify" />
         <img src="nordico mock 1.png" alt="Botanify" />
         <figcaption>Logo firmy Nordico - fikcyjnej działalności zajmującej się projektowaniem nowoczesnych wnętrz inspirowanych stylem 
-          skandynawskim. Za symbol logo wybrałem lisa, symbolizującego spryt i lekkość. Często przedstawiany w skandynawskich kulturach.
+          skandynawskim. Jako symbol użyłem wizerunku lisa, symbolizującego spryt i lekkość To zwierze jest często przedstawiane w skandynawskich kulturach.
           Wybrałem styl minimalistyczny tak, aby klient łatwo był w stanie zapamiętać i skojarzyć logo. </figcaption>
       </div>
     </section>
